1.1.2
	Overview
	
	New Features
	
	Changes
	
	Bug Fixes
		* Fixed onExit() bug not being called in Menu

1.1.1 - 2/1/2010
	Overview
		* Far better touch recognition, no more stupid timed usage
	
	New Features
		* Shape class allows geometric shapes to be drawn and manipulated as DynamicObjects, based on Polygons
		* Particle systems are now ready for us, see Example16
	
	Changes
		* Hotspot is now bound to DynamicObject rather than Sprite
	
	Bug Fixes
		* NullPointerException check on sensorManager 
		* Continuous playback in RokonMusic is fixed
		* Fixed loading screen problems
		* DynamicObject acceleration bug

1.1.0 - 29/12/2009
	Overview
		* An overhaul of the way textures are handled, see the Texture tutorial for help on updating your code http://stickycoding.com/rokon/rokon-tutorials/managing-textures
		* Now targets 1.6 SDK, uses direct buffers
	
	New Features
		* Basic and Advanced Menu examples added, see Example13 and Example14
		* Handling the accelerometer can be done through RokonActivity, see Example15
		* New, far more advanced particle engine, see Example16
		* Custom Tile Animation method for Sprite, see Example17
		* Added a very primitive post-processing demonstration, see Example18
		* ParallaxBackground is capable of horizontal parallax scrolling, see Example19
		
	Changes
		* Removed Emitter package, functionality replaced by ParticleModifier's
		* Documentation added to previous examples
		* Sprite, Particle, Emitter all now extend the superclass DynamicObject - in an attempt to the dynamics' functions
		* InputHandler works with XY coordinates directly, instead of the MotionEvent object
		* Font is now an extension of Texture, and must be applied to the atlas in the same way to be visible
	
	Bug Fixes
		* Texture loading error, 'width and height > 0' has been fixed - it was due to variables not being reset properly when the engine is created
		* Width/Height of screen is returned properly, so runs correctly on Droid